<resources>
    <string name="app_name">ToDo App C43 G Sun Wed</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="add_new_text">Add New Text</string>
    <string name="enter_your_task">enter your task...</string>
    <string name="enter_task_description">Enter task description...</string>
    <string name="select_date">Select Date</string>
    <string name="date_hint">- Click to select the date -</string>
    <string name="time_hint">- Click to select the time -</string>
    <string name="select_time">Select time</string>
    <string name="save">Save</string>
    <string name="task_title_is_required">Task Title is required.</string>
    <string name="task_desc_is_required">Task description is required.</string>
    <string name="task_title_is_short">Task Title is short</string>
    <string name="please_select_date">Please select date</string>
    <string name="to_do_list">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="task_details">Task details</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_task">Edit Task</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>